# spcw-aircraft-api

./: README.md  lint.ps1  main.py  pyproject.toml  readme_gen.py
docs/api/: aeroplane.md  aeroplanes_api.md  base_api.md  base_storage.md  json_storage.md  logger_creator.md  main.md  path.md
src/: __init__.py  aeroplane.py  aeroplanes_api.py  base_api.py  base_storage.py  json_storage.py  logger_creator.py  path.py
tests/: conftest.py  test_aeroplane.py  test_aeroplanes_api.py  test_json_storage.py  test_logger_creator.py  test_path.py
